# robotic_arms_ROS2

./: README.md
kuka_arm_pkg/: CMakeLists.txt
kuka_arm_pkg/launch/: 1_rviz_kuka_arm.launch.py  4_moveit_node_controlling.launch.py
kuka_arm_pkg/meshes/kr210l150/visual/: link_3_.dae
kuka_test_control/: .setup_assistant  CMakeLists.txt  package.xml
kuka_test_control/config/: kr210_arm.srdf  kr210_arm.urdf.xacro
kuka_test_control/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
test-wiki/: Home.md  Project-#1:-Kuka-6DOF-Moveit2.md  Project-#2:-[CM]Baxter-Multi-Arm-Moveit2-Control.md  Project-#3:-[CM]4-DOF-Robotic-Arm-ROS2-Hardware-Interfacing.md
